--- a/halo/template/details.pug
+++ b/halo/template/details.pug
@@ -1,6 +1,7 @@
 extends parts/layout.pug
 
 block css
+  link(rel="stylesheet", href="css/item.css")
   link(rel="stylesheet", href="css/details.css")
 
 block title
