--- a/halo/template/parts/card-5.pug
+++ b/halo/template/parts/card-5.pug
@@ -3,11 +3,12 @@
   img.item__badge.item__badge--hot(src="img/img--misc/badge--hot.png", alt="")
   img.item__badge.item__badge--love(src="img/img--misc/badge--love.png", alt="")
   .card-body.text-center
-    p.item__name.font-weight-bold.font-18 Canon 1DX Mark III
-    p.font-italic.font-weight-light.item__subtext (Mới 100% fullbox)
-    p.card-text.price.font-weight-bold 130.090.000đ
-    .card-text.sale-text.font-weight-bold
-      span.old-price 138.090.000đ
+    .item__header
+      p.item__name.font-weight-bold Canon 1DX Mark III
+      p.item__subtext.font-italic.font-weight-light (Mới 100% fullbox)
+    p.item__price.font-weight-bold 130.090.000đ
+    .item__sale-module.font-weight-bold
+      span.sale-module__old-price 138.090.000đ
       img.item__badge.item__badge--sale(src='img/img--misc/badge--sale.png' alt='')
-      span.sale-amount.font-italic (Giảm 8.000.000đ)
-    a.btn.btn--dark.seemore-btn(href='details.html') Xem chi tiết 
+      span.sale-module__sale-amount.font-italic (Giảm 8.000.000đ)
+    a.btn.btn--dark.btn--seemore(href='details.html') Xem chi tiết  
