--- a/halo/template/search-result.pug
+++ b/halo/template/search-result.pug
@@ -2,6 +2,7 @@ extends parts/layout.pug
 
 block css
   link(rel="stylesheet", href="css/dslr-hub.css")
+  link(rel="stylesheet", href="css/item.css")
   link(rel="stylesheet", href="css/search-result.css")
 
 block title
