--- a/halo/css/layout.css
+++ b/halo/css/layout.css
@@ -378,9 +378,8 @@ h1, h2 {
   transition: all 300ms;
   display: block;
   padding: 5px 10px;
-  width: fit-content;
-  margin-left: auto;
-  margin-right: auto;
+  width: auto;
+  font-size: 13px;
 }
 
 .btn--light {
@@ -408,6 +407,11 @@ h1, h2 {
   font-size: 12px;
   line-height: 16px;
   padding: 5px 10px;
+}
+
+.btn--seemore {
+  width: 100px;
+  line-height: 16px;
 }
 /* -------------------- 
 kết thúc buttons  
