--- a/halo/template/camera-hub.pug
+++ b/halo/template/camera-hub.pug
@@ -3,6 +3,8 @@ extends parts/layout.pug
 block css
   link(rel='stylesheet' type='text/css' href='//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css')
   link(rel="stylesheet", href="css/camera-hub.css")
+  link(rel="stylesheet", href="css/item.css")
+
 
 block title
   title Máy Ảnh
@@ -10,6 +12,7 @@ block title
 block script 
   script(src='https://unpkg.com/aos@2.3.1/dist/aos.js')
   script(src='js/aos-init.js')
+  script(src='js/slick-init.js')
 
 block content
 
