--- a/halo/template/camera-hub.pug
+++ b/halo/template/camera-hub.pug
@@ -89,7 +89,7 @@ block content
       include parts/card-4.pug
       include parts/card-5.pug
 
-    a.btn.btn--dark.hub-row__btn(href="dslr-hub.html") Xem toàn bộ 
+    a.btn.btn--dark.btn--seemore(href="dslr-hub.html") Xem toàn bộ 
 
     a(href="dslr-hub.html") 
       img.hub-row__banner.hidden-till-md(src="img/img--camera-hub/camera-hub-banner-2.jpg", alt="")
@@ -104,7 +104,7 @@ block content
       include parts/card-4.pug
       include parts/card-5.pug
 
-    a.btn.btn--dark.hub-row__btn(href="dslr-hub.html") Xem toàn bộ 
+    a.btn.btn--dark.btn--seemore(href="dslr-hub.html") Xem toàn bộ 
     
     a(href="dslr-hub.html") 
       img.hub-row__banner.hidden-till-md(src="img/img--camera-hub/camera-hub-banner-1.jpg", alt="")
@@ -119,7 +119,7 @@ block content
       include parts/card-4.pug
       include parts/card-5.pug
 
-    a.btn.btn--dark.hub-row__btn(href="dslr-hub.html") Xem toàn bộ 
+    a.btn.btn--dark.btn--seemore(href="dslr-hub.html") Xem toàn bộ 
 
     a(href="dslr-hub.html") 
       img.hub-row__banner.hidden-till-md(src="img/img--camera-hub/camera-hub-banner-3.jpg", alt="")
