--- a/halo/css/item.css
+++ b/halo/css/item.css
@@ -11,11 +11,19 @@
 .item {
   /* width 250, height 360 */
   width: 200px; 
-  padding: 25px 10px 20px 10px;
+  padding: 20px 10px;
   border-radius: 12px;
   border: 1px solid #bbbbbb;
   margin: 0px 10px;
   position: relative;
+}
+
+.main-area__items-area .item {
+  margin-bottom: 20px;
+}
+
+.item, .item * {
+  transition: all 0.4s;
 }
 
 .item:hover {
@@ -24,10 +32,14 @@
   cursor: pointer;
 }
 
+.item:hover > .card-img-top {
+  transform: scale(1.05);
+}
+
 .item .card-img-top {
   /*thumbnail 180*/
   width: 100%; 
-  padding: 0px 5%;
+  padding: 0px 10%;
 }
 
 .item .card-body {
@@ -102,6 +114,7 @@
   margin-left: 5px;
 }
 
+
 @media only screen and (min-width: 375px) {
   .item {
     /* width 250, height 360 */
@@ -115,113 +128,66 @@
 }
 
 @media only screen and (min-width: 576px) {
-  .item {
-    /* width 250, height 360 */
-    width: calc(50vw - 45px);
-    max-width: 250px;
-    padding: 15px 10px;
-    margin: 15px 10px;
-  }  
 
-  .item__name {
-    min-height: 30px;
-  }
 }
 
+/* 
+------------------------- 
+  item tablet ver 
+------------------------- 
+*/
 @media only screen and (min-width: 768px) {
-  /* ---------- update card (hub) styles ---------- */
-  .item.card {
-    /* width 222 */
-    width: 222px;
-    padding: 20px 10px;
-    margin: 0px 10px;
+
+  /* --------------- update settings --------------- */
+  .item {
+    /* width 250, height 360 */
+    width: 230px; 
+    margin: 12.5px;
   }
 
-  .item .card-body {
-    padding: 20px 0px 0px 0px;
+  .item__header {
+    min-height: 70px;
   }
 
-  .price {
-    line-height: 30px;
-    font-size: 24px;
-    margin: 15px 0px;
+  .item__name {
+    line-height: 1.3;
+    font-size: 18px;
   }
 
-  .item .seemore-btn {
-    margin: 15px auto 0px auto;
-    font-size: 16px;
-    line-height: 20px;
-    padding: 5px 15px;
-    width: 120px;
+  .item__price {
+    font-size: 28px;
+    line-height: 1.2;
+    margin-bottom: 10px;
   }
 
-  /* ---------- sale items module ---------- */
-  .sale-text {
-    flex-wrap: nowrap;
+  /* --------------- item__sale-module --------------- */
+
+  .item__sale-module {
+    min-height: 54px;
+    margin-bottom: 15px;
   }
 
-  /* ---------- hết update card (hub) styles ---------- */
+  .sale-module__old-price {
+    font-size: 18px;
+  }
 
+  .sale-module__sale-amount {
+    margin-top: 5px;
+  }
 
+  /* --------------- item__badge --------------- */
 
-    /* ---------- update item styles ---------- */
+  .item__badge {
+    height: 25px;
+  }
 
-    .main-area__items-area {
-      margin: 0px -10px;
-      justify-content: flex-start;
-    }
-  
-    .item.card {
-      /* width 222 */
-      width: 222px;
-      padding: 30px 10px;
-      margin: 15px 10px;
-    }
-  
-    .item__badge {
-      height: 25px;
-    }
-  
-    .item .card-body {
-      padding: 20px 0px 0px 0px;
-    }
-  
-    .item__subtext {
-      margin-top: 5px;
-      font-size: 16px;
-    }
-  
-    .price {
-      line-height: 32px;
-      font-size: 28px;
-      margin: 15px 0px 10px 0px;
-    }
-  
-    .sale-text {
-      min-height: 59px;
-    }
-  
-    .old-price {
-      font-size: 20px;
-    }
-  
-    .sale-amount {
-      font-size: 18px;
-    }
-  
-    .item .seemore-btn {
-      margin: 15px auto 0px auto;
-      font-size: 16px;
-      line-height: 20px;
-      padding: 5px 15px;
-    }
-  
-    /* ----- sale items module ----- */
-    .sale-text {
-      flex-wrap: wrap;
-    }
-  
-    /* ---------- hết update item styles ---------- */
+  .item--sale .item__badge--sale {
+    margin-left: 10px;
+  }
+
+  .item__subtext {
+    font-size: 15px;
+  }
 }
 
 @media only screen and (min-width: 992px) {
