--- a/halo/template/camera-hub.pug
+++ b/halo/template/camera-hub.pug
@@ -10,6 +10,7 @@ block title
   title Máy Ảnh
   
 block script 
+  script(type='text/javascript' src='//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js')
   script(src='https://unpkg.com/aos@2.3.1/dist/aos.js')
   script(src='js/aos-init.js')
   script(src='js/slick-init.js')
