--- a/halo/template/parts/card-1.pug
+++ b/halo/template/parts/card-1.pug
@@ -4,7 +4,7 @@
   img.item__badge.item__badge--love(src="img/img--misc/badge--love.png", alt="")
   .card-body.text-center
     .item__header
-      p.item__name.font-weight-bold.font-18 Canon EOS 5D Mark IV
+      p.item__name.font-weight-bold.font-18 Canon EOS 5D Mark&nbsp;IV
       p.item__subtext.font-italic.font-weight-light (Mới 100% fullbox)
     p.item__price.font-weight-bold 50.090.000đ
     .item__sale-module.font-weight-bold
