--- a/halo/template/parts/card-5.pug
+++ b/halo/template/parts/card-5.pug
@@ -4,7 +4,7 @@
   img.item__badge.item__badge--love(src="img/img--misc/badge--love.png", alt="")
   .card-body.text-center
     .item__header
-      p.item__name.font-weight-bold Canon 1DX Mark III
+      p.item__name.font-weight-bold Canon EOS 1DX Mark&nbsp;III
       p.item__subtext.font-italic.font-weight-light (Mới 100% fullbox)
     p.item__price.font-weight-bold 130.090.000đ
     .item__sale-module.font-weight-bold
