--- a/halo/css/details.css
+++ b/halo/css/details.css
@@ -402,11 +402,11 @@ section {
 .recommend__wrapper {
   display: flex;
   max-width: 540px;
-  margin: 0px auto 30px auto;
+  margin: 15px auto 30px auto;
 }
 
 /* --------------- .item styles --------------- */
-.card.item {
+.item {
   /* width 250, height 360 */
   width: calc(50vw - 20px); 
   padding: 15px 10px;
@@ -416,20 +416,20 @@ section {
   transition: all 0.3s;
 }
 
-.card.item:hover {
+.item:hover {
   border: 1px solid #555555;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
   cursor: pointer;
 }
 
-.card.item .card-img-top {
+.item .card-img-top {
   /*thumbnail 200*/
   width: 100%; 
   max-width: 200px;
   margin: auto;
 }
 
-.card.item .card-body {
+.item .card-body {
   padding: 10px 0px 0px 0px;
 }
 
@@ -445,7 +445,7 @@ section {
   margin: 5px 0px;
 }
 
-.card.item .seemore-btn {
+.item .seemore-btn {
   width: fit-content;
   margin: 15px auto 0px auto;
   font-size: 12px;
@@ -490,12 +490,8 @@ section {
   }
 
   /* ---------- update item styles ---------- */
-  .card.item {
-    /* width 250, height 360 */
-    width: calc(50vw - 45px);
-    max-width: 250px;
-    padding: 15px 10px;
-    margin: 15px 10px;
+  .item {
+    margin: 15px 30px;
   }
   /* ---------- hết update item styles ---------- */  
 }
@@ -673,14 +669,12 @@ section {
 
 
   /* ---------- update item styles ---------- */
-  .card.item {
-    /* width 222 */
-    width: 222px;
-    padding: 20px 10px 25px 10px;
-    margin: 15px 10px;
+
+  .details__recommend .item {
+    margin: 0px 15px;
   }
 
-  .card.item .card-body {
+  .item .card-body {
     padding: 20px 0px 0px 0px;
   }
 
@@ -690,7 +684,7 @@ section {
     margin: 15px 0px 5px 0px;
   }
 
-  .card.item .seemore-btn {
+  .item .seemore-btn {
     margin: 15px auto 0px auto;
     font-size: 16px;
     line-height: 20px;
@@ -814,7 +808,7 @@ section {
     flex-direction: column;
   }
 
-  .item.card {
+  .item {
     /* width 280 */
     width: 280px;
     max-width: 280px;
