--- a/halo/template/parts/card-3.pug
+++ b/halo/template/parts/card-3.pug
@@ -4,7 +4,7 @@
   img.item__badge.item__badge--love(src="img/img--misc/badge--love.png", alt="")
   .card-body.text-center
     .item__header
-      p.item__name.font-weight-bold Sony Alpha A7 Mark II
+      p.item__name.font-weight-bold Sony Alpha A7 Mark&nbsp;II
       p.item__subtext.font-italic.font-weight-light (Mới 100% fullbox)
     p.item__price.font-weight-bold 23.990.000đ
     .item__sale-module.font-weight-bold
