--- a/halo/template/search-result.pug
+++ b/halo/template/search-result.pug
@@ -18,13 +18,12 @@ block content
     .result-item-area 
       h1.search__header.w-100.text-left 
         | Tìm thấy&nbsp;
-        span.search__result 3
+        span.search__result 2
         | &nbsp;kết quả cho:&nbsp;
-        span.search__result 5D
+        span.search__result Canon
 
       include parts/card-1.pug
-      include parts/card-2.pug
-      include parts/card-3.pug
+      include parts/card-5.pug
 
     .promo-area.hidden-till-md
       h1.promo-header Khuyến mại HOT
